--- a/src/main/resources/templates/list-users.html
+++ b/src/main/resources/templates/list-users.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primer Parcial DAW</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link th:href="@{webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet" />
+    <link th:href="@{webjars/bootstrap/5.3.3/css/bootstrap.min.css}" rel="stylesheet" />
+
 </head>
 <body>
     <div class="container">
@@ -43,5 +44,17 @@
             <a class="btn btn-dark " href="/nuevo">Agregar Usuario</a>
         </div>
     </div>
+
+    <footer>
+        <div  class="divFooter" style="
+        align-items: center; 
+        text-align: center;">
+        <p><b>© 2024</b></p>
+        <p><b> Guillermo Alexander Rodríguez Cortez(RC22051)</b></p>
+        <p><b>Salvador Isaías Juárez Alcántara(JA22005)</b></p>
+    </div>
+        
+
+    </footer>
 </body>
 </html>
